Using JPG over PNG to save space

--- a/covers.css
+++ b/covers.css
@@ -12750,43 +12750,43 @@
 /*
     MANGA
 */
-/* Three Days of Happiness */                           #more100448 {background-image:url('https://waiifu.github.io/MALCDN/Manga/Three Days of Happiness.png')}
-/* Taiyou no Ie */                                      #more26736  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Taiyou no Ie.png')}
-/* Kimi no Suizou wo Tabetai */                         #more104538 {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kimi no Suizou wo Tabetai.png')}
-/* Last Game */                                         #more30315  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Last Game.png')}
-/* Dame na Watashi ni Koishite Kudasai */               #more55403  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Dame na Watashi ni Koishite Kudasai.png')}                             
-/* Mushoku Tensei: Isekai Ittara Honki Dasu */          #more70259  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Mushoku Tensei: Isekai Ittara Honki Dasu.png')}
-/* ReLIFE */                                            #more78523  {background-image:url('https://waiifu.github.io/MALCDN/Manga/ReLIFE.png')}
-/* Hajimete no Gal */                                   #more98938  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Hajimete no Gal.png')}
-/* Kono Shima ni wa Midara de Jaaku na Mono ga Sumu */  #more77993  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kono Shima ni wa Midara de Jaaku na Mono ga Sumu.png')}
-/* Kimi wa Midara na Boku no Joou */                    #more44155  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kimi wa Midara na Boku no Joou.png')}  
-/* Velvet Kiss */                                       #more22638  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Velvet Kiss.png')}
-/* Koi wo Suru no ga Shigoto desu. */                   #more13883  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Koi wo Suru no ga Shigoto desu..png')}
-/* Boku Girl */                                         #more63781  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Boku Girl.png')}
-/* Horimiya */                                          #more42451  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Horimiya.png')}
-/* Domestic na Kanojo */                                #more70941  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Domestic na Kanojo.png')}
-/* Swap⇔Swap */                                         #more94878  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Swap⇔Swap.png')}
-/* Ani Tomo */                                          #more95705  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Ani Tomo.png')}
-/* Bokura wa Minna Kawai-sou */                         #more26769  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Bokura wa Minna Kawai-sou.png')}
-/* Machida-kun no Sekai */                              #more58141  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Machida-kun no Sekai.png')}
-/* Harumatsu Bokura */                                  #more72949  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Harumatsu Bokura.png')}
-/* Kyou no Asuka Show */                                #more16709  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kyou no Asuka Show.png')}
-/* Kyou no Kira-kun */                                  #more35035  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kyou no Kira-kun.png')}
-/* Bonnouji */                                          #more28226  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Bonnouji.png')}
-/* Aizawa-san Zoushoku */                               #more63579  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Aizawa-san Zoushoku.png')}
-/* Kyou no Yuiko-san */                                 #more47617  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kyou no Yuiko-san.png')}
-/* Goblin Slayer */                                     #more98720  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Goblin Slayer.png')}
-/* Shuumatsu no Harem */                                #more98752  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Shuumatsu no Harem.png')}
-/* Kimi no Iru Machi */                                 #more8483   {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kimi no Iru Machi.png')}
-/* Something About Us */                                #more96573  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Something About Us.png')}
-/* Shall we Have Dinner Tonight? */                     #more99659  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Shall we Have Dinner Tonight.png')}
-/* Love at Fourteen */                                  #more31185  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Love at Fourteen.png')}
-/* Futari no Renai Shoka */                             #more57359  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Futari no Renai Shoka.png')}
-/* Kanojo ni Naru Hi */                                 #more54817  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kanojo ni Naru Hi.png')}
-/* Shishunki Bitter Change */                           #more65473  {background-image:url('https://waiifu.github.io/MALCDN/Manga/Shishunki Bitter Change.png')}
-/* Akagami no Shirayuki-hime */                         #more4571   {background-image:url('https://waiifu.github.io/MALCDN/Manga/Akagami no Shirayukihime.png')}
-/* Koisome Momiji */									#more37013 	{background-image:url('https://waiifu.github.io/MALCDN/Manga/Koisome Momiji.png')}
-/* Komi-san wa, Comyushou desu. */                      #more99007	{background-image:url('https://waiifu.github.io/MALCDN/Manga/Komi-san wa, Comyushou desu..png')}
+/* Three Days of Happiness */                           #more100448 {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Three Days of Happiness.jpg')}
+/* Taiyou no Ie */                                      #more26736  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Taiyou no Ie.jpg')}
+/* Kimi no Suizou wo Tabetai */                         #more104538 {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kimi no Suizou wo Tabetai.jpg')}
+/* Last Game */                                         #more30315  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Last Game.jpg')}
+/* Dame na Watashi ni Koishite Kudasai */               #more55403  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Dame na Watashi ni Koishite Kudasai.jpg')}                             
+/* Mushoku Tensei: Isekai Ittara Honki Dasu */          #more70259  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Mushoku Tensei: Isekai Ittara Honki Dasu.jpg')}
+/* ReLIFE */                                            #more78523  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/ReLIFE.jpg')}
+/* Hajimete no Gal */                                   #more98938  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Hajimete no Gal.jpg')}
+/* Kono Shima ni wa Midara de Jaaku na Mono ga Sumu */  #more77993  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kono Shima ni wa Midara de Jaaku na Mono ga Sumu.jpg')}
+/* Kimi wa Midara na Boku no Joou */                    #more44155  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kimi wa Midara na Boku no Joou.jpg')}  
+/* Velvet Kiss */                                       #more22638  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Velvet Kiss.jpg')}
+/* Koi wo Suru no ga Shigoto desu. */                   #more13883  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Koi wo Suru no ga Shigoto desu..jpg')}
+/* Boku Girl */                                         #more63781  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Boku Girl.jpg')}
+/* Horimiya */                                          #more42451  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Horimiya.jpg')}
+/* Domestic na Kanojo */                                #more70941  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Domestic na Kanojo.jpg')}
+/* Swap⇔Swap */                                         #more94878  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Swap⇔Swap.jpg')}
+/* Ani Tomo */                                          #more95705  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Ani Tomo.jpg')}
+/* Bokura wa Minna Kawai-sou */                         #more26769  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Bokura wa Minna Kawai-sou.jpg')}
+/* Machida-kun no Sekai */                              #more58141  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Machida-kun no Sekai.jpg')}
+/* Harumatsu Bokura */                                  #more72949  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Harumatsu Bokura.jpg')}
+/* Kyou no Asuka Show */                                #more16709  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kyou no Asuka Show.jpg')}
+/* Kyou no Kira-kun */                                  #more35035  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kyou no Kira-kun.jpg')}
+/* Bonnouji */                                          #more28226  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Bonnouji.jpg')}
+/* Aizawa-san Zoushoku */                               #more63579  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Aizawa-san Zoushoku.jpg')}
+/* Kyou no Yuiko-san */                                 #more47617  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kyou no Yuiko-san.jpg')}
+/* Goblin Slayer */                                     #more98720  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Goblin Slayer.jpg')}
+/* Shuumatsu no Harem */                                #more98752  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Shuumatsu no Harem.jpg')}
+/* Kimi no Iru Machi */                                 #more8483   {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kimi no Iru Machi.jpg')}
+/* Something About Us */                                #more96573  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Something About Us.jpg')}
+/* Shall we Have Dinner Tonight? */                     #more99659  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Shall we Have Dinner Tonight.jpg')}
+/* Love at Fourteen */                                  #more31185  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Love at Fourteen.jpg')}
+/* Futari no Renai Shoka */                             #more57359  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Futari no Renai Shoka.jpg')}
+/* Kanojo ni Naru Hi */                                 #more54817  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kanojo ni Naru Hi.jpg')}
+/* Shishunki Bitter Change */                           #more65473  {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Shishunki Bitter Change.jpg')}
+/* Akagami no Shirayuki-hime */                         #more4571   {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Akagami no Shirayukihime.jpg')}
+/* Koisome Momiji */									#more37013 	{background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Koisome Momiji.jpg')}
+/* Komi-san wa, Comyushou desu. */                      #more99007	{background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Komi-san wa, Comyushou desu..jpg')}
 #more {background-image:url('')}
 #more {background-image:url('')}
 #more {background-image:url('')}
