--- a/modernCovers.css
+++ b/modernCovers.css
@@ -559,40 +559,40 @@
 /*
     MANGA
 */
-/* Three Days of Happiness */                           .data.image a[href^="/manga/100448/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Three Days of Happiness.png')}
-/* Taiyou no Ie */                                      .data.image a[href^="/manga/26736/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Taiyou no Ie.png')}
-/* Kimi no Suizou wo Tabetai */                         .data.image a[href^="/manga/104538/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kimi no Suizou wo Tabetai.png')}
-/* Last Game */                                         .data.image a[href^="/manga/30315/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Last Game.png')}
-/* Dame na Watashi ni Koishite Kudasai */               .data.image a[href^="/manga/55403/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Dame na Watashi ni Koishite Kudasai.png')}                             
-/* Mushoku Tensei: Isekai Ittara Honki Dasu */          .data.image a[href^="/manga/70259/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Mushoku Tensei: Isekai Ittara Honki Dasu.png')}
-/* ReLIFE */                                            .data.image a[href^="/manga/78523/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/ReLIFE.png')}
-/* Hajimete no Gal */                                   .data.image a[href^="/manga/98938/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Hajimete no Gal.png')}
-/* Kono Shima ni wa Midara de Jaaku na Mono ga Sumu */  .data.image a[href^="/manga/77993/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kono Shima ni wa Midara de Jaaku na Mono ga Sumu.png')}
-/* Kimi wa Midara na Boku no Joou */                    .data.image a[href^="/manga/44155/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kimi wa Midara na Boku no Joou.png')}  
-/* Velvet Kiss */                                       .data.image a[href^="/manga/22638/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Velvet Kiss.png')}
-/* Koi wo Suru no ga Shigoto desu. */                   .data.image a[href^="/manga/13883/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Koi wo Suru no ga Shigoto desu..png')}
-/* Boku Girl */                                         .data.image a[href^="/manga/63781/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Boku Girl.png')}
-/* Horimiya */                                          .data.image a[href^="/manga/42451/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Horimiya.png')}
-/* Domestic na Kanojo */                                .data.image a[href^="/manga/70941/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Domestic na Kanojo.png')}
-/* Swap⇔Swap */                                         .data.image a[href^="/manga/94878/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Swap⇔Swap.png')}
-/* Ani Tomo */                                          .data.image a[href^="/manga/95705/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Ani Tomo.png')}
-/* Bokura wa Minna Kawai-sou */                         .data.image a[href^="/manga/26769/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Bokura wa Minna Kawai-sou.png')}
-/* Machida-kun no Sekai */                              .data.image a[href^="/manga/58141/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Machida-kun no Sekai.png')}
-/* Harumatsu Bokura */                                  .data.image a[href^="/manga/72949/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Harumatsu Bokura.png')}
-/* Kyou no Asuka Show */                                .data.image a[href^="/manga/16709/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kyou no Asuka Show.png')}
-/* Kyou no Kira-kun */                                  .data.image a[href^="/manga/35035/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kyou no Kira-kun.png')}
-/* Bonnouji */                                          .data.image a[href^="/manga/28226/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Bonnouji.png')}
-/* Aizawa-san Zoushoku */                               .data.image a[href^="/manga/63579/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Aizawa-san Zoushoku.png')}
-/* Kyou no Yuiko-san */                                 .data.image a[href^="/manga/47617/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kyou no Yuiko-san.png')}
-/* Goblin Slayer */                                     .data.image a[href^="/manga/98720/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Goblin Slayer.png')}
-/* Shuumatsu no Harem */                                .data.image a[href^="/manga/98752/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Shuumatsu no Harem.png')}
-/* Kimi no Iru Machi */                                 .data.image a[href^="/manga/8483/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kimi no Iru Machi.png')}
-/* Something About Us */                                .data.image a[href^="/manga/96573/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Something About Us.png')}
-/* Shall we Have Dinner Tonight? */                     .data.image a[href^="/manga/99659/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Shall we Have Dinner Tonight.png')}
-/* Love at Fourteen */                                  .data.image a[href^="/manga/31185/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Love at Fourteen.png')}
-/* Futari no Renai Shoka */                             .data.image a[href^="/manga/57359/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Futari no Renai Shoka.png')}
-/* Kanojo ni Naru Hi */                                 .data.image a[href^="/manga/54817/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Kanojo ni Naru Hi.png')}
-/* Shishunki Bitter Change */                           .data.image a[href^="/manga/65473/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Shishunki Bitter Change.png')}
-/* Akagami no Shirayuki-hime */                         .data.image a[href^="/manga/4571/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Akagami no Shirayukihime.png')}
-/* Koisome Momiji */                                    .data.image a[href^="/manga/37013/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Koisome Momiji.png')}
-/* Komi-san wa, Comyushou desu. */                      .data.image a[href^="/manga/99007/"] {background-image:url('https://waiifu.github.io/MALCDN/Manga/Komi-san wa, Comyushou desu..png')}
+/* Three Days of Happiness */                           .data.image a[href^="/MangaJPG/100448/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Three Days of Happiness.jpg')}
+/* Taiyou no Ie */                                      .data.image a[href^="/MangaJPG/26736/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Taiyou no Ie.jpg')}
+/* Kimi no Suizou wo Tabetai */                         .data.image a[href^="/MangaJPG/104538/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kimi no Suizou wo Tabetai.jpg')}
+/* Last Game */                                         .data.image a[href^="/MangaJPG/30315/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Last Game.jpg')}
+/* Dame na Watashi ni Koishite Kudasai */               .data.image a[href^="/MangaJPG/55403/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Dame na Watashi ni Koishite Kudasai.jpg')}                             
+/* Mushoku Tensei: Isekai Ittara Honki Dasu */          .data.image a[href^="/MangaJPG/70259/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Mushoku Tensei: Isekai Ittara Honki Dasu.jpg')}
+/* ReLIFE */                                            .data.image a[href^="/MangaJPG/78523/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/ReLIFE.jpg')}
+/* Hajimete no Gal */                                   .data.image a[href^="/MangaJPG/98938/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Hajimete no Gal.jpg')}
+/* Kono Shima ni wa Midara de Jaaku na Mono ga Sumu */  .data.image a[href^="/MangaJPG/77993/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kono Shima ni wa Midara de Jaaku na Mono ga Sumu.jpg')}
+/* Kimi wa Midara na Boku no Joou */                    .data.image a[href^="/MangaJPG/44155/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kimi wa Midara na Boku no Joou.jpg')}  
+/* Velvet Kiss */                                       .data.image a[href^="/MangaJPG/22638/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Velvet Kiss.jpg')}
+/* Koi wo Suru no ga Shigoto desu. */                   .data.image a[href^="/MangaJPG/13883/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Koi wo Suru no ga Shigoto desu..jpg')}
+/* Boku Girl */                                         .data.image a[href^="/MangaJPG/63781/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Boku Girl.jpg')}
+/* Horimiya */                                          .data.image a[href^="/MangaJPG/42451/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Horimiya.jpg')}
+/* Domestic na Kanojo */                                .data.image a[href^="/MangaJPG/70941/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Domestic na Kanojo.jpg')}
+/* Swap⇔Swap */                                         .data.image a[href^="/MangaJPG/94878/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Swap⇔Swap.jpg')}
+/* Ani Tomo */                                          .data.image a[href^="/MangaJPG/95705/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Ani Tomo.jpg')}
+/* Bokura wa Minna Kawai-sou */                         .data.image a[href^="/MangaJPG/26769/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Bokura wa Minna Kawai-sou.jpg')}
+/* Machida-kun no Sekai */                              .data.image a[href^="/MangaJPG/58141/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Machida-kun no Sekai.jpg')}
+/* Harumatsu Bokura */                                  .data.image a[href^="/MangaJPG/72949/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Harumatsu Bokura.jpg')}
+/* Kyou no Asuka Show */                                .data.image a[href^="/MangaJPG/16709/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kyou no Asuka Show.jpg')}
+/* Kyou no Kira-kun */                                  .data.image a[href^="/MangaJPG/35035/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kyou no Kira-kun.jpg')}
+/* Bonnouji */                                          .data.image a[href^="/MangaJPG/28226/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Bonnouji.jpg')}
+/* Aizawa-san Zoushoku */                               .data.image a[href^="/MangaJPG/63579/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Aizawa-san Zoushoku.jpg')}
+/* Kyou no Yuiko-san */                                 .data.image a[href^="/MangaJPG/47617/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kyou no Yuiko-san.jpg')}
+/* Goblin Slayer */                                     .data.image a[href^="/MangaJPG/98720/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Goblin Slayer.jpg')}
+/* Shuumatsu no Harem */                                .data.image a[href^="/MangaJPG/98752/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Shuumatsu no Harem.jpg')}
+/* Kimi no Iru Machi */                                 .data.image a[href^="/MangaJPG/8483/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kimi no Iru Machi.jpg')}
+/* Something About Us */                                .data.image a[href^="/MangaJPG/96573/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Something About Us.jpg')}
+/* Shall we Have Dinner Tonight? */                     .data.image a[href^="/MangaJPG/99659/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Shall we Have Dinner Tonight.jpg')}
+/* Love at Fourteen */                                  .data.image a[href^="/MangaJPG/31185/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Love at Fourteen.jpg')}
+/* Futari no Renai Shoka */                             .data.image a[href^="/MangaJPG/57359/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Futari no Renai Shoka.jpg')}
+/* Kanojo ni Naru Hi */                                 .data.image a[href^="/MangaJPG/54817/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Kanojo ni Naru Hi.jpg')}
+/* Shishunki Bitter Change */                           .data.image a[href^="/MangaJPG/65473/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Shishunki Bitter Change.jpg')}
+/* Akagami no Shirayuki-hime */                         .data.image a[href^="/MangaJPG/4571/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Akagami no Shirayukihime.jpg')}
+/* Koisome Momiji */                                    .data.image a[href^="/MangaJPG/37013/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Koisome Momiji.jpg')}
+/* Komi-san wa, Comyushou desu. */                      .data.image a[href^="/MangaJPG/99007/"] {background-image:url('https://waiifu.github.io/MALCDN/MangaJPG/Komi-san wa, Comyushou desu..jpg')}
